// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders modal for mobile view 1`] = `
<DocumentFragment>
  <div
    class="sc-pbJYR hNzbLI sc-pkfPC fQMEfn"
  />
</DocumentFragment>
`;

exports[`Sidebar renders with collapsed sidebar 1`] = `
<DocumentFragment>
  <div
    class="sc-pbJYR hNzbLI sc-pkfPC fQMEfn"
  >
    <div
      class="sc-AxjAm sc-AxiKw sc-pZQux dGqyOi"
      color="tertiary.dark"
      width="56"
    />
  </div>
</DocumentFragment>
`;

exports[`Sidebar renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pbJYR hNzbLI sc-pkfPC fQMEfn"
  >
    <div
      class="sc-AxjAm sc-AxiKw sc-pZQux cAhDEX"
      color="tertiary.dark"
      width="200"
    />
  </div>
</DocumentFragment>
`;
